// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component crée un snapshot du composant Text 1`] = `
<Text
  style={
    [
      {
        "color": "#ffffff",
      },
      undefined,
    ]
  }
>
  Snapshot Test
</Text>
`;

exports[`View Component crée un snapshot du composant View 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#343a40",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
        },
        undefined,
      ]
    }
  >
    Inside View
  </Text>
</View>
`;
